test/Harper/Tests/Bad/issue3_overApp.har
f n = (\x y => n + x + y);

appMul a b = (\n => f n (a * b));

main = appMul 7 17 42 5 1;